Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-6075

Fix failing xxx-with-meta test cases on ubuntu

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 2.0-beta
    • None
    • couchbase-bucket
    • Security Level: Public
    • None

    Description

      Running [0171/0362]: delete with meta deleted (couchstore)...ep_testsuite.cc:6305 Test failed: `Expected single temp_items' (tempi == 1)
      CORE DUMPED

      Running [0176/0362]: set with meta deleted (couchstore)...ep_testsuite.cc:6660 Test failed: `Expected zero curr_items' (get_int_stat(h, h1, "curr_items") == 0)
      CORE DUMPED

      Running [0172/0362]: delete with meta nonexistent (couchstore)...ep_testsuite.cc:6381 Test failed: `Expected zero curr_items' (get_int_stat(h, h1, "curr_items") == 0)
      CORE DUMPED

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            mikew Mike Wiederhold [X] (Inactive)
            mikew Mike Wiederhold [X] (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty